# MITMNNS

./: .gitignore  CMakeLists.txt  LICENSE  README.md
cmake/: cmake_uninstall.cmake.in  mitmnnsConfig.cmake.in
examples/: CMakeLists.txt  direct_V.cpp  hnsw_CC_V.cpp  hnsw_Clifford_T.cpp  hnsw_Clifford_utils.hpp  hnsw_T.cpp  hnsw_V.cpp  hnsw_mt_T.cpp  kdtree_V.cpp  utils.hpp
examples/data/: Clifford2.fvecs  SU2_100.fvecs  SU4_100.fvecs  SU4_C100.fvecs  SU8_100.fvecs  SU8_C100.fvecs
include/mitmnns/: gate_operation.hpp  meet_in_the_middle.hpp  nearest_neighbor_search.hpp
include/mitmnns/impl/: SU2_operation.hpp  SUD_operation.hpp  conditionally_controlled_gate_operation.hpp  direct_search.hpp  hnswlib_search.hpp  hnswlib_utils.h  kdtree_search.hpp
